--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=6b32c6d370e041c62d5d7777d8af477b
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/monsuperblog
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
